# display

./: FORD.md  LICENSE  README.md  fpm.toml  meson.build
example/: example_display.f90  example_display_character.f90  example_display_complex.f90  example_display_integer.f90  example_display_logical.f90  example_display_real.f90  meson.build
src/: display.F90  meson.build
