executable(
    'example_display_character',
    'example_display_character.f90',
    link_with: display_lib,
)

executable(
    'example_display_complex',
    'example_display_complex.f90',
    link_with: display_lib,
)

executable(
    'example_display_integer',
    'example_display_integer.f90',
    link_with: display_lib,
)

executable(
    'example_display_logical',
    'example_display_logical.f90',
    link_with: display_lib,
)

executable(
    'example_display_real',
    'example_display_real.f90',
    link_with: display_lib,
)
